// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ripple renders the container with ripple 1`] = `
<button>
  button text
  <div
    class="ripple useAnimation"
    style="top:2px;left:4px"
  />
</button>
`;

exports[`Ripple renders the container without ripple 1`] = `
<button>
  button text
</button>
`;

exports[`Ripple renders the ripple 1`] = `
<div
  class="ripple useAnimation"
  style="top:2px;left:4px"
/>
`;
